# proj

./: package-lock.json
racing-api-chatbot/: .gitignore  Dockerfile  Dockerfile.pipeline  check_requirements.py  docker-compose.yaml  init_db.py  pyproject.toml  requirements.txt
racing-api-chatbot/data/raw/: racecards_date_20250413_193356.json  racecards_date_20250418_161544.json  results_date_20250413_193359.json  results_date_20250418_161545.json
racing-api-chatbot/data_pipeline/: Dockerfile  cronjob  requirements.txt
racing-api-chatbot/data_pipeline/src/: data_ingestion_v2.py  data_pipeline.py  fetch_data.py
racing-api-chatbot/src/: main.py
racing-api-chatbot/src/auth/: schemas.py  utils.py
racing-api-chatbot/src/db/: check_db.py  database.py  init_db.py  load_data.py  models.py
racing-api-chatbot/src/graph/: __init__.py  prompts.py
racing-api-chatbot/src/graph/complex_query_agent/: chains.py  models.py  nodes.py
racing-api-chatbot/src/graph/root_agent/: chains.py  models.py  nodes.py
racing-api-chatbot/src/graph/simple_query_agent/: chains.py  models.py  nodes.py
racing-api-chatbot/src/ingestion/: config.py  data_ingestion.py  ingest_data.py
racing-api-chatbot/src/utils/: api_client.py  cached_api_client.py  context.py
racing-api-chatbot/tests/: test_api.py  test_query.py
racing-insights/: index.html  package-lock.json  package.json  vite.config.js
racing-insights/src/: App.jsx  index.css
racing-insights/src/api/: chat.js
racing-insights/src/constants/: ThemeContext.jsx  theme.jsx
racing-insights/src/layouts/: auth-layout.jsx
(+33 files in other folders)
