[project]
name = "racing-api-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "decouple>=0.0.7",
    "dotenv>=0.9.9",
    "langchain>=0.3.24",
    "langchain-openai>=0.3.14",
    "langgraph>=0.4.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
